
####   Don't forget to change the version number in configure.ac!   ####

01 Nov 2005 Clear high portion of Address Mask in ESAME LPSW - Ivan Warren
31 Oct 2005 PER3 Breaking Event Address Recording (BEAR) revised - Roger Bowler
29 Oct 2005 Final(?) console fg/bg default/color highlighting issue fix - Fish
29 Oct 2005 Fix STFLE SIE intercept - Jan Jaeger
29 Oct 2005 Fix stdout redirection - Jan Jaeger
27 Oct 2005 Fix segfault in SIGP against offline CPU - Jan Jaeger
26 Oct 2005 PER3 Breaking Event Address Recording (BEAR) framework - Roger Bowler
25 Oct 2005 Fix `size exceeds 4G' cckd error during dasdcopy - Greg Smith
25 Oct 2005 Reinstate SIGP code regressed by enhancements of 23 Oct - Roger Bowler
24 Oct 2005 Activate FEATURE_DAT_ENHANCEMENT_FACILITY_2 (LPTEA) - Roger Bowler
24 Oct 2005 LPTEA condition code setting - Roger Bowler
23 Oct 2005 SIGP/IPL enhancements: add support for new Conditional Emergency
            and Sense Running State orders, add support for Set Architecture
            order parm code 2 and other associated fixes to SIGP processing
            (minor fixes to clear reset logic, "operator intervening" status;
            restructure ipl.c & add support for captured z/Arch PSW, add CPU#
            to registers display in hscmisc.c) - Fish
22 Oct 2005 ACCTYPE_LPTEA in translate_addr - Roger Bowler
22 Oct 2005 Fish's (x-n) bit-shifts (ALRF readability enhancement) - Roger Bowler
21 Oct 2005 Move inline functions from esame.c to inline.h - Roger Bowler
20 Oct 2005 Fix extra path separator issue in http_download - Fish
20 Oct 2005 "tasks/xmlrates" == 'cgibin_xml_rates_info()' contributed
            by Tim Pinkawa [timpinkawa@gmail.com] - Fish
20 Oct 2005 cckdutil.c: use LSEEK instead of lseek - Fish
19 Oct 2005 Add OSTAILOR z/OS - Roger Bowler
19 Oct 2005 Don't allow windows paths to confuse shared_ckd_init - Fish
18 Oct 2005 Setting of excarid for ASTE-instance exception (Fish) - Roger Bowler
15 Oct 2005 Fix panel color - Jay & Greg Smith